--- a/pages/About_us.html
+++ b/pages/About_us.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ReadTime</title>
-	<link rel="stylesheet" type="text/css"  href="/css/style_about_us.css">
+	<link rel="stylesheet" type="text/css"  href="css/style_about_us.css">
 
 	 <!logo font-------------------------------------------------->
    <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -36,10 +36,10 @@
     	<div class="main-list" id="navLinks1">
     		<i class="fas fa-times"  onclick="hideMenu()"></i>
 			<ul>
-				<li><a href="/index.html">Home</a></li>
-				<li><a href="/pages/Books.html">Books</a></li>
-				<li><a href="/pages/sample_papers.htm">MCQ's</a></li>
-				<li><a href="/pages/About_us.html">About </a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="pages/Books.html">Books</a></li>
+				<li><a href="pages/sample_papers.htm">MCQ's</a></li>
+				<li><a href="pages/About_us.html">About </a></li>
 			</ul>
    </section>
 
