--- a/pages/Books.html
+++ b/pages/Books.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ReadTime</title>
-	<link rel="stylesheet" type="text/css"  href="/css/style_books.css">
+	<link rel="stylesheet" type="text/css"  href="css/style_books.css">
     <!logo font-------------------------------------------------->
    <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&display=swap" rel="stylesheet">
@@ -32,10 +32,10 @@
     		<i class="fas fa-times"  onclick="hideMenu()"></i>
     		
 			<ul>
-				<li><a href="/index.html">Home</a></li>
-				<li><a href="/pages/Books.html">Books</a></li>
-				<li><a href="/pages/sample_papers.htm">MCQ's</a></li>
-				<li><a href="/pages/About_us.html">About </a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="pages/Books.html">Books</a></li>
+				<li><a href="pages/sample_papers.htm">MCQ's</a></li>
+				<li><a href="pages/About_us.html">About </a></li>
 			</ul>
 			
 
