--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 			
 			<ul>
 				<li><a href="https://drive.google.com/file/d/1lweYez4rx2-I7gOCDbiEJ7fR6wQRmFdt/view?usp=sharing">Syllabus</a></li>
-				<li><a href="/pages/Books.html">Books</a></li>
-				<li><a href="/pages/sample_papers.htm">MCQ's</a></li>
-				<li><a href="/pages/About_us.html">About us</a></li>
+				<li><a href="pages/Books.html">Books</a></li>
+				<li><a href="pages/sample_papers.htm">MCQ's</a></li>
+				<li><a href="pages/About_us.html">About us</a></li>
 			</ul>
 			
 		</div>
@@ -53,7 +53,7 @@
         <div class="info-1">
 			<h1> Video Lectures</h1>
 			<h3> Video lectures available for all first year Engineering subjects</h3>
-			<a href="/pages/video.html" class="btn" >Watch Now</a>
+			<a href="pages/video.html" class="btn" >Watch Now</a>
 		
 
 		</div>
@@ -64,14 +64,14 @@
 		<div class="info-2">
 			<h1>Sample Papers</h1>
 			<h3> Sample paper pdf are availabe which are according to <p>the SPPU pattern</p></h3>
-			<a href="/pages/sample_papers.htm" class="btn-1">Explore</a>
+			<a href="pages/sample_papers.htm" class="btn-1">Explore</a>
 		</div>
 
 
 		<div class="info-3">
 			<h1>Books</h1>
 			<h3>Books pdf are available which are recommendes by SPPU</h3>
-			<a href="/pages/Books.html" class="btn-2">Explore</a>
+			<a href="pages/Books.html" class="btn-2">Explore</a>
 		</div>
 
 		<div class="info-4">
