--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ReadTime</title>
-	<link rel="stylesheet" type="text/css"  href="css/style home page.css">
+	<link rel="stylesheet" type="text/css"  href="./css/style home page.css">
 	<!font link>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,600&display=swap" rel="stylesheet">
